<resources>
    <string name="app_name">InSight</string>
    <string name="user_registration">User Registration</string>
    <string name="already_registered_signin_here">Already Registered? Signin Here</string>
    <string name="logout">Logout</string>
    <string name="user_login">User Login</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="signup">Signup</string>
    <string name="not_have_an_account_signup_here">Not have an account? Signup Here</string>
    <string name="signin">Sign In</string>
    <string name="rating">Rating</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data and sync</string>
    <string name="pref_header_debug">Debug</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="Toas">Get current user data</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings">Settings</string>
    <string name="title_activity_navigation" translatable="false">NavigationActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="radiobutton" translatable="false">RadioButton</string>
    <string name="title_activity_test" translatable="false">TestActivity</string>
    <string name="dashboard">Dashboard</string>
    <string name="my_excursions">My Excursions</string>
    <string name="search">Search</string>
    <string name="log_out">Log out</string>
    <string name="about">About</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="trip_create_error">Trip creation is failed.For more information call +79185166379</string>
    <string name="trip_create_success">Trip creation is succeed</string>
    <string name="trip_create_emptydata">Please,  fill all of the fields</string>
    <string name="trip_create">Create trip</string>
    <string name="create_trip">Create trip</string>
    <string name="trip_create_ET_name">Enter name of the trip</string>
    <string name="trip_create_ET_date">Enter date of trip</string>
    <string name="trip_create_ET_address">Enter address of meeting</string>
    <string name="trip_create_ET_description">Tell about your trip</string>
    <string name="login">Login</string>
    <string name="title_activity_menu_main" translatable="false">MenuMainActivity</string>
    <string name="drawer_my_excursions">My Excursions</string>
    <string name="drawer_search">Search</string>
    <string name="darawer_create_excursion">Create Excursion</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_info">About</string>
    <string name="drawer_log_out">Log Out</string>
    <string name="service">Service</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="recently_added">Recently added</string>
    <string name="find_your_way">Find your way</string>
    <string name="explore">Explore</string>
    <string name="share_your_experience">Share your experience</string>
    <string name="create">Create</string>
    <string name="more_info">More info</string>
    <string name="organize">Organized</string>
    <string name="participate_in">Participate in</string>
    <string name="friendly_reminder">Friendly reminder of your excursions</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="user_photo">user_photo</string>
    <string name="username_nav_placeholder">UserName</string>
    <string name="useremail_nav_placeholder">UserEmail@gmail.com</string>
    <string name="date_and_time">Date and time</string>
    <string name="meeting_point">Meeting point</string>
    <string name="Author_name_not_found">Author name not found</string>
    <string-array name="Languages">
        <item>English</item>
        <item>Русский</item>
        <item>Ukraine</item>
        <item>German</item>
    </string-array>
    <string name="repeat_password">Repeat password</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="edit_picture">Edit picture</string>
    <string name="exview_btn">I\'m in</string>
    <string name="exview_btn_im_in">I\'m in</string>
    <string name="edit_excursion">Edit excursion</string>
    <string name="maximum_visitors">Maximum visitors</string>
    <string name="confirm_changes">Confirm changes</string>
    <string name="edit_image">Edit image</string>
    <string name="language">Language</string>
    <string name="Edit_Excursion">Edit Excursion</string>
    <string name="pref_title_debug_get_curr_user_data">Get current user\'s data</string>
    <string name="pref_description_social_recommendations">Social recommendations</string>
    <string name="how_to_create_1" >Do you want to create a trip? Then follow this steps and welcome to the touristic world!</string>
    <string name="how_to_create_2">To begin press \"Create\".</string>
    <string name="how_to_create_4">Describe your trip. Don\'t write a lot, because long texts bore readers faster. Add tags to make your trip easier to find.</string>
    <string name="how_to_create_5">Put beginning date. If your trip lasts several days, then indikate it in description.</string>
    <string name="how_to_create_6">Choose language of your trip.</string>
    <string name="how_to_create_7">Put meeting point to tell people where meet with you.</string>
    <string name="how_to_create_8">Point maximum visitors of your trip.</string>
    <string name="how_to_create_9">You can also choose a picture of your trip from your device\'s gallery or leave default picture.</string>
    <string name="how_to_create_10">Press button \"Create\". You\'ve created your first trip, our congratulations! Have a good time with our application.</string>
    <string name="how_to_create_3">Create a name for your trip. Try to do it more attractive to intrigue people.</string>
    <string name="how_to_search_1">Want to go to the trip, but can’t find interesting one? Use our search system and find anything you want.</string>
    <string name="how_to_search_2">To begin press “Explore”.</string>
    <string name="how_to_search_3">Choose language of trip.</string>
    <string name="how_to_search_4">Describe tags (key words) about your trips, they will be searched. For example, #review #Rostov-on-Don.</string>
    <string name="how_to_search_5">Press “Search”. We hope you found wanted one.</string>
    <string name="trip_edit_successfully">Изменения сохранены</string>
    <string name="dialog_1">Dialog 1</string>
    <string name="dialog_2">Dialog 2</string>
    <string name="message_text">Text of your message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">Maybe</string>
    <string name="change_pass">Change password</string>
    <string name="pls_entr_email">Please enter email</string>
    <string name="pls_entr_psswrd">Please enter password</string>
    <string name="signing_in_pls_wait">Signing in... Please wait...</string>
    <string name="incc_log_pass_try">Incorrect login and/or password. Please, try again.</string>
    <string name="google_auth_err">Something went wrong while connecting to Google. Please, try again.</string>
    <string name="pass_requirmts">Password must be more than 6 chars</string>
    <string name="pls_entr_login">Please enter login</string>
    <string name="psswd_dnt_match">Passwords don\'t match</string>
    <string name="registr_pls_wait">Registering Please Wait...</string>
    <string name="reg_err">Registration Error</string>
    <string name="crete_trip_name">Trip name</string>
    <string name="create_trip_description">Trip Description</string>
    <string name="create_trip_meeting_point">Meeting point</string>
    <string name="create_trip_location">Trip Location</string>
    <string name="create_trip_max_visitors">Maximum visitors</string>
    <string name="crete_trip_maxcount_of_visitors">Maximum count of visitors</string>
    <string name="excursion_name">Excursion Name</string>
    <string name="confirm">Confirm</string>
    <string name="security">Security</string>
    <string name="change_password">Change password</string>
    <string name="profile">Profile</string>
    <string name="edit_avatar">Edit avatar</string>
    <string name="change_name">Change name</string>
    <string name="change_e_mail">Change e-mail</string>
    <string name="useremail">UserEmail</string>
    <string name="view_trip_button_who_is_in">Who is in?</string>
    <string name="author_name">Author name</string>
    <string name="title_list_i_m_organizing">I\'m organizing</string>
    <string name="title_list_i_m_participating">I\'m participating</string>
    <string name="language_selection">Language selection</string>
    <string name="del_user">You are out</string>
    <string name="add_user">You are in</string>
    <string name="username">UserName</string>
    <string name="i_m_in">I\'m in</string>
    <string name="preferable_tags">Preferable tags</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="repeat_your_new_password">Repeat your new password</string>
    <string name="cancel">Cancel</string>
    <string name="date_dots">Date:</string>
    <string name="language_dots">Language:</string>
    <string name="name_dots">Name:</string>
</resources>