<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:theme="@style/AppTheme.NoActionBar"
        tools:context="com.pelicanus.insight.EmailPassActivityReg">

        <ImageView
            android:id="@+id/user_photo"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:paddingTop="30dp"
            android:visibility="visible"
            app:srcCompat="@drawable/logo_white_interface" />


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewSignin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="25dp"
                    android:text="@string/user_registration"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextLogin"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:drawablePadding="7dp"
                    android:drawableStart="@drawable/ic_perm_identity_black_36dp"
                    android:ems="10"
                    android:hint="@string/login"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="7dp"
                    android:drawableStart="@drawable/ic_mail_black_24dp"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="7dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_36dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_marginTop="10dp"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextPasswordRepeat"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:drawablePadding="7dp"
                    android:drawableStart="@drawable/ic_lock_outline_black_36dp"
                    android:ems="10"
                    android:hint="Repeat password"
                    android:inputType="textPassword"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:onClick="registerUser"
                    android:text="@string/signup" />

                <TextView
                    android:id="@+id/textViewSignup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/already_registered_signin_here"
                    android:onClick="OpenMainActivity"
                    android:textAlignment="center" />



            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>
</ScrollView>